Fixed collapsing rendering bugs in webkit

--- a/css/app.css
+++ b/css/app.css
@@ -391,29 +391,42 @@ nav > div:last-child a.active {
 
 #input tbody th:last-child {
     text-align: right;
+    overflow: visible;
+}
+
+#input tbody th:last-child div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow: visible;
 }
 
 #input tbody th i {
     color: rgba(0, 0, 0, 0.5);
     font-style: normal;
     font-size: 1em;
-    width: 30px;
-    height: 30px;
+    width: 26px;
+    height: 26px;
     display: inline-block;
     background: white;
     border-radius: 50%;
-    position: relative;
+    position: absolute;
+    transform: translateY(-50%) translateY(-1px);
     top: 50%;
+    right: 0;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     vertical-align: middle;
     transition: all 200ms ease;
     cursor: pointer;
+    z-index: 999;
     -webkit-tap-highlight-color: transparent;
     -webkit-backface-visibility: hidden; /* Fix 1px shift bug on Chrome. */
 }
 
 #input tbody th i:hover {
-    transform: translateY(-3px);
+    transform: translateY(-50%) translateY(-4px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
@@ -422,7 +435,7 @@ nav > div:last-child a.active {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 16px;
+    width: 14px;
     margin-top: -1px;
     height: 2px;
     background: #444;
